# Kept

antigo/: main.c
antigo/about/: stylesAbout.css
antigo/output/: main
backend/: README.md  package-lock.json  pyproject.toml
backend/backend/: main.py
backend/backend/routes/: klebsiela.py
backend/backend/services/: database.py
backend/tests/: 1cod.py
database/: README.md  pyproject.toml
database/banco_mongoBD/: funcionando  getCapb.py  getFasta.py  getGBK.py  getKL.py  main.py  metadados.py  tabeladados.xlsx
frontend/: README.md  package-lock.json  package.json
frontend/output/main.dSYM/Contents/Resources/DWARF/: main
frontend/output/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
frontend/src/: App.css  App.js
frontend/src/components/: bacteria.jsx
frontend/src/components/About/: about.css  about.jsx
frontend/src/components/Footer/: Footer.css  Footer.jsx
frontend/src/components/LogoSection/: LogoSection.css  LogoSection.jsx
frontend/src/components/Sidebar/: Sidebar.css  Sidebar.jsx
frontend/src/components/header/: header.css  header.jsx
frontend/src/components/tabela/: table.css  table.jsx
frontend/src/components/team/: team.css  team.jsx
frontend/src/pages/: about.jsx  bacGenoma.jsx  documentation.jsx  home.jsx  upload.jsx
frontend/src/services/: api.js
