[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["charliekuster <lidyaneapk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pymongo = "^4.11.1"
fastapi = {extras = ["standard"], version = "^0.115.8"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
