[tool.poetry]
name = "test2"
version = "0.1.0"
description = ""
authors = ["charliekuster <lidyaneapk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
paramiko = "^3.5.0"
pymongo = "^4.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
